# RAG-DOC-PROJECT

./: app.py  main.py  pyproject.toml  requirements.txt  streamlit.py
src/config/: config.py
src/doc_ingestion/: doc_process.py
src/graphbuilder/: graph_builder.py
src/nodes/: nodes.py  reactnode.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py
